--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,28 @@
+asyncio==3.4.3
+azure-ai-textanalytics==5.1.0
+azure-common==1.1.28
+azure-core==1.25.1
 certifi==2022.6.15.2
 charset-normalizer==2.1.1
+colorama==0.4.5
 et-xmlfile==1.1.0
-greenlet==1.1.3
+greenlet==1.1.2
 idna==3.4
-numpy==1.23.3
+isodate==0.6.1
+msrest==0.7.1
+numpy==1.23.2
 oauthlib==3.2.1
 openpyxl==3.0.10
-pandas==1.4.4
+pandas==1.4.3
 pyodbc==4.0.34
 python-dateutil==2.8.2
-python-dotenv==0.21.0
+python-dotenv==0.20.0
 pytz==2022.2.1
 requests==2.28.1
 requests-oauthlib==1.3.1
 six==1.16.0
-SQLAlchemy==1.4.41
+SQLAlchemy==1.4.40
+tqdm==4.64.0
 tweepy==4.10.1
+typing_extensions==4.3.0
 urllib3==1.26.12
